# WorkSphere.dapp

./: README.md  package-lock.json
NikhilDhakad/: OnboardingPage.tsx  ProfilePage.tsx
backend/: Anchor.toml
backend/programs/backend/: Cargo.toml
backend/programs/backend/src/: contexts.rs  error.rs  lib.rs  state.rs
my-app/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
my-app/src/(anchor)/: idl.json  setup.ts
my-app/src/(anchor)/actions/: fetchjob.ts  registeruser.ts
my-app/src/(providers)/: WalletProvider.tsx  userProvider.tsx
my-app/src/(types)/: types.ts
my-app/src/app/: globals.css  layout.tsx  page.tsx  routeguard.tsx
my-app/src/app/(module)/ui/: calendar.tsx  chart.tsx  popover.tsx  sidebar.tsx  toaster.tsx  use-toast.ts
my-app/src/app/dashboard/: page.tsx
my-app/src/app/dashboard/(components)/: Dashcomponent.tsx  RegistereComponent.tsx  userUtils.ts
my-app/src/app/dashboard/(components)/Register/: RegistereComponent.tsx
my-app/src/app/dispute-create/[jobId]/: page.tsx
my-app/src/app/disputes/: page.tsx
my-app/src/app/disputes/[jobId]/: page.tsx
my-app/src/app/disputes/components/: DisputeDetailPage.tsx  disputeshow.tsx
my-app/src/app/hooks/: use-toast.ts
my-app/src/app/jobs/: page.tsx
my-app/src/app/jobs/[jobId]/: page.tsx
my-app/src/app/manage-jobs/: page.tsx
my-app/src/app/manage-jobs/component/: Managejob.tsx  resumeFree.tsx
my-app/src/app/manage-jobs/new/: page.tsx
my-app/src/app/module/ui/: button.tsx
my-app/src/app/proposals/: page.tsx
my-app/src/app/submit-work/[jobId]/: page.tsx
(+23 files in other folders)
