[package]
name = "backend"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "backend"

[features]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []

cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
sha2 = "0.10.9"


